# repair-tracker

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/alembic/: env.py
app/alembic/versions/: 2f0cb66130b7_add_user_model.py  4b79d239b295_add_tables_for_school_repair_note_.py  6dc106b4f361_.py  6dc106b4f361_add_user_model.py  efa07ada97af_add_created_at_to_notes.py
app/models/: __init__.py  collection.py  device.py  note.py  repair.py  school.py  user.py
app/routes/: auth.py  collection.py  device.py  note.py  repair.py  school.py
app/templates/components/: device_overview.html  footer.html  head.html  header.html  login.html  login_form.html  nav.html  notification.html  repair_overview.html  school_overview.html
app/templates/layouts/: default.html
app/templates/partials/: login_error.html  repair_note.html  school_edit.html  school_new.html
app/templates/views/: collection_overview.html  index.html  index.jinja2  login.html  repair_overview.html  repair_view.html  repairs.html  school_overview.html
app/utils/: dependencies.py
